<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gyro Plane Log Book</string>
    <string name="menu_title">Log Book</string>
    <string name="Insert_Entry">Insert A Log Entry</string>
    <string name="list_all_customers">List All Log Entries</string>
    <string name="view_a_customer">View A Log Entry</string>
    <string name="edit_a_customer">Edit A Log Entry</string>
    <string name="delete_a_customer">Delete A Log Entry</string>
    <string name="todays_schedule">Today\'s Schedule</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_company_name">GYRO PLANE LOG-BOOK</string>
    <string name="title_application_name">Scheduling Record</string>
    <string name="title_new_customer">New Log Entry</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>


    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="price">Price:</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string name="edit_preferences">Edit preferences</string>
    
    <string name="title_theme_preference">Background Images</string>
    <string name="summary_theme_preference">Available background images</string>
    <string name="dialog_title_theme_preference">Select a background image</string>
    
    <string-array name="entries_theme_preference">
        <item>Default image</item>
        <item>Image1</item>
        <item>Image2</item>
    </string-array>
    
    <string name="default_theme_value">SplashThemeDefault</string>
    <string name="splash_theme_1">SplashTheme1</string>
    <string name="splash_theme_2">SplashTheme2</string>
    
    <string-array name="entryvalues_theme_preference">
        <item>@string/default_theme_value</item>
        <item>@string/splash_theme_1</item>
        <item>@string/splash_theme_2</item>
    </string-array>

    <string name="title_font_preference">Font preferences</string>
    <string name="summary_font_preference">Available font sizes</string>
    <string name="dialog_title_font_preference">Select a font size</string>
    
    <string-array name="entries_font_preference">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    
    <string name="font_small">Small</string>
    <string name="font_medium">Medium</string>
    <string name="font_large">Large</string>
    
    <string-array name="entryvalues_font_preference">
        <item>@string/font_small</item>
        <item>@string/font_medium</item>
        <item>@string/font_large</item>
    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    
</resources>