<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
		
	<PreferenceCategory
	    android:title="Category Title"
    	android:layout="@layout/preference_title" />
    	
	<ListPreference
    	android:key="splash_preference"
        android:title="@string/title_theme_preference"
        android:summary="@string/summary_theme_preference"
        android:entries="@array/entries_theme_preference"
        android:entryValues="@array/entryvalues_theme_preference"
        android:dialogTitle="@string/dialog_title_theme_preference"
        android:defaultValue="@string/default_theme_value" />
    
	<ListPreference
    	android:key="font_preference"
        android:title="@string/title_font_preference"
        android:summary="@string/summary_font_preference"
        android:entries="@array/entries_font_preference"
        android:entryValues="@array/entryvalues_font_preference"
        android:dialogTitle="@string/dialog_title_font_preference"
        android:defaultValue="@string/font_medium" />
	
</PreferenceScreen>